<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/activity_exercise2_edt_result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/back"
            android:textSize="18sp"
            android:lines="4"
            android:typeface="normal"
            android:padding="10dp"
            android:hint="@string/exercise2_hint_number"
            android:gravity="center_vertical|end" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/activity_exercise2_btn_number0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="calculateValue"
            android:tag="0"
            android:text="@string/exercise2_action_0" />

        <Button
            android:id="@+id/activity_exercise2_btn_number1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="calculateValue"
            android:tag="1"
            android:text="@string/exercise2_action_1" />

        <Button
            android:id="@+id/activity_exercise2_btn_number2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="calculateValue"
            android:tag="2"
            android:text="@string/exercise2_action_2" />

        <Button
            android:id="@+id/activity_exercise2_btn_number3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="calculateValue"
            android:tag="3"
            android:text="@string/exercise2_action_3" />

        <Button
            android:id="@+id/activity_exercise2_btn_number4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="calculateValue"
            android:tag="4"
            android:text="@string/exercise2_action_4" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/activity_exercise2_btn_number5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="calculateValue"
            android:tag="5"
            android:text="@string/exercise2_action_5" />

        <Button
            android:id="@+id/activity_exercise2_btn_number6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="calculateValue"
            android:tag="6"
            android:text="@string/exercise2_action_6" />

        <Button
            android:id="@+id/activity_exercise2_btn_number7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="calculateValue"
            android:tag="7"
            android:text="@string/exercise2_action_7" />

        <Button
            android:id="@+id/activity_exercise2_btn_number8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="calculateValue"
            android:tag="8"
            android:text="@string/exercise2_action_8" />

        <Button
            android:id="@+id/activity_exercise2_btn_number9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="calculateValue"
            android:tag="9"
            android:text="@string/exercise2_action_9" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/activity_exercise2_btn_dot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="calculateValue"
            android:tag="."
            android:text="@string/exercise2_action_dot" />

        <Button
            android:id="@+id/activity_exercise2_btn_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="calculateValue"
            android:tag="+"
            android:text="@string/exercise2_action_plus" />

        <Button
            android:id="@+id/activity_exercise2_btn_substract"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="calculateValue"
            android:tag="-"
            android:text="@string/exercise2_action_substract" />

        <Button
            android:id="@+id/activity_exercise2_btn_multiply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="calculateValue"
            android:tag="*"
            android:text="@string/exercise2_action_multiply" />

        <Button
            android:id="@+id/activity_exercise2_btn_divide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="calculateValue"
            android:tag="/"
            android:text="@string/exercise2_action_divide" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/activity_exercise2_btn_sqrt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="calculateValue"
            android:tag="SQRT"
            android:text="@string/exercise2_action_sqrt" />

        <Button
            android:id="@+id/activity_exercise2_btn_square_root"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="calculateValue"
            android:tag="√"
            android:text="@string/exercise2_action_square_root" />

        <Button
            android:id="@+id/activity_exercise2_btn_mod"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="calculateValue"
            android:tag="MOD"
            android:text="@string/exercise2_action_mod" />

        <Button
            android:id="@+id/activity_exercise2_btn_div"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="calculateValue"
            android:tag="DIV"
            android:text="@string/exercise2_action_div" />

        <Button
            android:id="@+id/activity_exercise2_btn_equals"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="calculateValue"
            android:tag="="
            android:text="@string/exercise2_action_equals" />
    </LinearLayout>
</LinearLayout>