<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    android:orientation="horizontal">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:padding="5dp">

        <ImageView
            android:id="@+id/activity_exercise3_img_phone"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/exercise3_msg_phone"
            android:scaleType="fitCenter"
            android:src="@drawable/icon1" />

        <TextView
            android:id="@+id/activity_exercise3_txt_phone"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/activity_exercise3_img_phone"
            android:layout_centerInParent="true"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/exercise3_msg_phone"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:padding="5dp">

        <ImageView
            android:id="@+id/activity_exercise3_img_mail"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/exercise3_msg_mail"
            android:layout_centerHorizontal="true"
            android:scaleType="fitCenter"
            android:src="@drawable/icon13" />

        <TextView
            android:id="@+id/activity_exercise3_txt_mail"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/activity_exercise3_img_mail"
            android:layout_centerInParent="true"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/exercise3_msg_mail"/>

    </RelativeLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:padding="5dp">

        <ImageView
            android:id="@+id/activity_exercise3_img_safari"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/exercise3_msg_safari"
            android:scaleType="fitCenter"
            android:src="@drawable/icon11" />

        <TextView
            android:id="@+id/activity_exercise3_txt_safari"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/activity_exercise3_img_safari"
            android:layout_centerInParent="true"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/exercise3_msg_safari"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:padding="5dp">

        <ImageView
            android:id="@+id/activity_exercise3_img_music"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/exercise3_msg_music"
            android:scaleType="fitCenter"
            android:src="@drawable/icon14" />

        <TextView
            android:id="@+id/activity_exercise3_txt_music"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/activity_exercise3_img_music"
            android:layout_centerInParent="true"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/exercise3_msg_music"/>

    </RelativeLayout>

</LinearLayout>